force-app/main/default/objects/House__c/fields/Estate_Agent__c.field-meta.xml
<CustomField>
    <fullName>Estate_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estate Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Houses</relationshipLabel>
    <relationshipName>Houses</relationshipName>
    <type>Lookup</type>
</CustomField>