force-app/main/default/objects/House__c/fields/Google_Maps__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/maps/place/&apos;+ SUBSTITUTE(SUBSTITUTE(Street__c , &apos; &apos;, &apos;+&apos;),&apos;/&apos;,&apos;%2F&apos;) + &apos;+&apos; + SUBSTITUTE( Suburb__c , &apos; &apos;, &apos;+&apos;) ,  Street__c )</formula>
    <label>Google Maps</label>
    <type>Text</type>
</CustomField>