force-app/main/default/objects/House__c/fields/Website_Link__c.field-meta.xml
<CustomField>
    <fullName>Website_Link__c</fullName>
    <label>Website Link</label>
    <type>Url</type>
</CustomField>