force-app/main/default/objects/House__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Street__c</columns>
    <columns>Value__c</columns>
    <columns>Type__c</columns>
    <columns>Suburb__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>